--- a/css/style.css
+++ b/css/style.css
@@ -34,33 +34,46 @@ body {
   font-family: Pacifico;
 }
 
-.card span{
-  font-size: 22px;
+.card span {
+  font-size: 28px;
   color: brown;
 }
 
 .form-control {
   display: block;
   width: 100%;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  padding: 18px;
+  font-size: 22px;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: brown;
   background: #f5f1f1;
   background-clip: padding-box;
   border: 1px solid #ced4da;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  border-radius: 1.25rem;
+  border-radius: 40px;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 label {
   display: inline-block;
   padding: 0px 5px;
-  font-size: 16px;
+  font-size: 22px;
+}
+
+.mb-3 {
+  margin-bottom: 35px !important;
+}
+
+.btn-danger {
+  color: #fff;
+  background-color: #dc3545;
+  border-color: #dc3545;
+  padding: 15px 30px;
+  font-size: 20px;
+  border-radius: 30px;
 }
 
 .output {
@@ -72,7 +85,7 @@ footer {
   padding: 20px 0px 5px;
 }
 footer span {
-  font-size: 20px;
+  font-size: 30px;
 }
 
 footer span a {
@@ -104,6 +117,14 @@ footer span a:hover {
     font-family: Pacifico;
     font-size: 24px;
   }
+  .card {
+    color: rgb(68, 55, 55);
+    margin: 5vh 0;
+    padding: 60px;
+    border-radius: 50px;
+    background: #dcd0d0;
+    box-shadow: 20px 20px 60px #bbb1b1, -20px -20px 60px #fdefef;
+  }
 }
 
 @media (max-width: 767px) {
@@ -120,7 +141,43 @@ footer span a:hover {
   body {
     padding: 0px 10px;
   }
-  .card span{
+  .card span {
     font-size: 18px;
+  }
+  .form-control {
+    display: block;
+    width: 100%;
+    padding: 11px;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: brown;
+    background: #f5f1f1;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 40px;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  }
+  .mb-3 {
+    margin-bottom: 15px !important;
+  }
+  .btn-danger {
+    color: #fff;
+    background-color: #dc3545;
+    border-color: #dc3545;
+    padding: 7px 15px;
+    font-size: 16px;
+    border-radius: 28px;
+  }
+  label {
+    display: inline-block;
+    padding: 0px 5px;
+    font-size: 18px;
+  }
+  .mb-5 {
+    margin-bottom: 1.2rem !important;
   }
 }
